--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "eslint-plugin-ziloen",
   "version": "0.1.2",
+  "type": "module",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "files": [
     "dist"
   ],
