--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.3",
   "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -20,6 +26,7 @@
     "eslint": "^8.52.0",
     "rimraf": "^5.0.5",
     "tsup": "^7.2.0",
+    "tsutils": "^3.21.0",
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0"
   }
