--- a/package.json
+++ b/package.json
@@ -2,31 +2,30 @@
   "name": "eslint-plugin-ziloen",
   "version": "0.1.8",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    }
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup src/index.ts --format esm,cjs --clean --minify",
-    "release": "pnpm run build && bumpp --commit --no-push && npm publish"
+    "build": "tsup",
+    "release": "npm run build && bumpp --commit --no-push && npm publish",
+    "test": "vitest"
   },
   "dependencies": {
-    "@types/eslint": "^8.56.7",
-    "@types/node": "^20.12.2",
-    "@typescript-eslint/rule-tester": "^7.5.0",
-    "@typescript-eslint/utils": "^7.5.0",
-    "bumpp": "^9.4.0",
-    "eslint": "^8.57.0",
-    "rimraf": "^5.0.5",
+    "@typescript-eslint/utils": "7.11.0",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.12.13",
+    "@typescript-eslint/parser": "7.11.0",
+    "bumpp": "^9.4.1",
+    "eslint": "^9.3.0",
+    "eslint-vitest-rule-tester": "^0.3.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.3",
-    "unbuild": "^2.0.0"
+    "unbuild": "^2.0.0",
+    "vitest": "^1.6.0"
   }
 }
