migrate to tsdown

--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "release": "npm run build && bumpp --commit --no-push && npm publish",
     "test": "vitest"
   },
   "dependencies": {
-    "@typescript-eslint/utils": "8.12.1",
-    "typescript": "^5.6.3"
+    "@typescript-eslint/utils": "8.38.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
-    "@types/node": "^20.14.12",
-    "@typescript-eslint/parser": "8.12.1",
-    "bumpp": "^9.8.0",
-    "eslint": "^9.13.0",
-    "eslint-vitest-rule-tester": "^0.6.1",
-    "tsup": "^8.3.5",
-    "vitest": "^2.1.4"
+    "@types/node": "^24.1.0",
+    "@typescript-eslint/parser": "8.38.0",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.31.0",
+    "eslint-vitest-rule-tester": "^2.2.0",
+    "tsdown": "^0.13.0",
+    "vitest": "^3.2.4"
   }
 }
